src/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
@import url('https://use.typekit.net/pyb2jyf.css');

@media screen and (min-width: 729px) {
  .desktop-only {
  }
  .mobile-only {
    display: none !important;
  }
}

@media screen and (max-width: 728px) {
  .desktop-only {
    display: none !important;
  }
  .mobile-only {
  }
}

/* STYLES */
:root {
  font-family: 'SF-Pro', Helvetica, Arial, sans-serif;
  line-height: auto;
  font-weight: 450;

  color-scheme: light dark;
  color: #555;
  background-color: #FDFDFF;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

h1 {
  font-size: 1.2em;
  font-weight: 600;
}

p {
  font-size: 24px;
  font-weight: 450;
  line-height: 95%;
}

p.small {
  font-size: 16px;
  line-height: 100%;
}

p.big {
  font-size: 32px;
  letter-spacing: -0.5px;
}

@media screen and (max-width: 728px) {
  p.big {
    font-size: 34px;
  }

  p.small {
    line-height: 120%;
  }
}

p.value-prop {
  text-transform: uppercase;
}

p.margin-bottom {
  margin-bottom: 48px;
}

.section-title {
  font-size: 16px;
  font-weight: 550;
  margin-bottom: 8px;
}

.title {
  font-size: 24px;
  font-weight: 450;
  line-height: 95%;
}

a {
  display: inline-block;
  position: relative;
  font-weight: 450;
  font-size: 16px;
  line-height: 95%;
  border-bottom: 1px solid #111;
  padding-bottom: 4px;
  overflow: hidden;
  transition: border-color 400ms;
}

a::after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 1.5px;
	background-color: #111;
	transition: opacity 400ms, transform 400ms;
  opacity: 1;
	transform: translate3d(-100%, 0, 0);
}

a:hover {
  border-color: #FEFEFE;
}

a:hover::after,
a:focus::after {
	opacity: 1;
	transform: translate3d(0, 0, 0);
}

@media screen and (max-width: 728px) {
  .title, p, a {
    font-size: 18px;
    line-height: 100%;
  }
}

ul {
  padding-left: 16px;
}

/* LAYOUT */
body {
  scroll-behavior: smooth;
}

.main__container {
  display: block;
  overflow: scroll;
  scroll-behavior: smooth;
}

.non-scrollable {
  overflow: hidden;
}

@media screen and (max-width: 728px) {
  .main__container {
    height: auto;
  }
  .non-scrollable {
    overflow: scroll;
  }
}

/* CHAT */
.chat-container {
  position: absolute;
  box-sizing: border-box;
  width: 100vw;
  min-height: 100vh;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 16px;
}
@media screen and (max-width: 728px) {
  .chat-container {
    position: absolute;
    justify-content: flex-start;
    box-sizing: border-box;
    align-items: center;
    width: 100vw;
    height: auto;
    margin: 24px 0 0 0;
    top: 0;
    bottom: auto;
    overflow-y: auto; /* Enable vertical scrolling */
    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
  }
}

.chat-block {
  display: flex;
  flex-direction: column;
  gap: 8px;
  box-sizing: border-box;
}

.chat-bubble {
  background-color: #F7F7F8;
  border-radius: 20px 20px 20px 0;
  padding: 12px 20px;
  width: 420px;
  box-sizing: border-box;
  line-height: 20px;
}

@media screen and (max-width: 728px) {
  .chat-bubble {
    width: 320px;
    max-width: 100%;
  }
}

.chat-avatar-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: 8px;
  font-size: 12px;
  color: #888;
}

.chat-author {
  width: 24px;
  height: 24px;
  border-radius: 24px;
}

.chat-container a {
  display: inline;
  transition: none;
  border-bottom: none;
  padding: 0;
  font-size: 16px;
  text-decoration: underline;
}

.chat-container a:after {
  display: none;
}

.chat-answer {
  background-color: #F6F6F7;
  border-radius: 10px;
  padding: 12px 20px;
  width: 420px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  color: #AAA;
  margin-bottom: 32px;
  box-sizing: border-box;
}

@media screen and (max-width: 728px) {
  .chat-answer {
    max-width: 100%;
    width: 320px;
  }
}

.chat-answer img {
  width: 16px;
  height: 16px;
  rotate: 180deg;
  cursor: pointer;
}

.chat-answer form {
  display: flex;
  flex-direction: row;
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

.chat-answer button {
  border: none;
  padding: 0;
  margin: 0;
  height: 16px;
  background: transparent;
}

.chat-answer input[type="text"] {
  width: 100%;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  background-color: transparent;
}

.chat-answer input[type="text"]:focus {
  outline: none
}

/* FOOTER */
footer {
  position: absolute;
  box-sizing: border-box;
  bottom: 0;
  width: 100vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 20px 32px;
}

footer .links, footer .contacts {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  gap: 32px;
}

footer a {
  border-bottom: none;
}

@media screen and (max-width: 728px) {
  footer {
    display: none;
  }
}

/* PORTFOLIO ROW */
.portfolio-wrapper {
  display: flex;
  flex-direction: column;
  align-items: end;
}

@media screen and (max-width: 728px) {
  .portfolio-wrapper {
    width: 80%;
    box-sizing: border-box;
    padding: 24px 24px;
  }
}

.portfolio-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 8px;
  margin: 24px 40px 120px;
  overflow: hidden;
}

@media screen and (max-width: 728px) {
  .portfolio-container {
    flex-direction: column;
    box-sizing: border-box;
    width: 100%;
    margin: 0;
    padding: 24px 0;
  }
}

.portfolio-item {
  height: 320px;
  width: 320px;
  background-size: contain;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-end;
  overflow: hidden;
  aspect-ratio : 1 / 1;
  border-radius: 10px;
  box-shadow: 0 0.6021873017743928px 0.6021873017743928px -1.25px #0000002e, 0 2.288533303243457px 2.288533303243457px -2.5px #00000029, 0 10px 10px -3.75px #00000010, 0 1px 2px #00000014, 0 0 2px #0000000f;
  cursor: pointer;
}

@media screen and (max-width: 728px) {
  .portfolio-item {
    aspect-ratio : 1 / 1;
    width: 100%;
    height: auto;
  }
}

.portfolio-panel {
  background-color: rgba(0,0,0,88%);
  padding: 32px 24px;
  height: auto;
  margin-bottom: -166.39px;
  display: flex;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
}

.portfolio-panel p, .portfolio-panel .portfolio-title, .portfolio-panel .portfolio-content  {
  color: #FEFEFE;
  font-size: 16px;
  margin-bottom: 4px;
  display: inline-block;
}

.portfolio-panel .portfolio-content {
  margin-bottom: 0;
}

.portfolio-panel .portfolio-title {
  font-weight: 550;
}

.portfolio-item .plus-icon {
  margin-bottom: 16px;
  margin-right: 16px;
  cursor: pointer;
}

.portfolio-item .plus-icon:hover {
  transition: transform 400ms;
  transform: rotate(90deg) !important;
}

.portfolio-item .plus-icon.open-icon:hover {
  transform: rotate(45deg) !important;
}

.portfolio-panel-bottom {
  margin-top: 16px;
  display: flex;
  width: 100%;
  flex-direction: row;
  align-items: flex-end;
  justify-content: space-between;
}

.portfolio-panel-bottom .open-popup {
  width: 20px;
  height: 20px;
  cursor: pointer;
  margin-bottom: 2px;
}

.portfolio-wrapper .close-icon {
  height: 20px;
  width: 20px;
  cursor: pointer;
}

/* POPUP */
.popup-container {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0, 60%);
  z-index: 110;
  display: flex;
  align-items: center;
  justify-content: center;
}

.popup-panel {
  position: fixed;
  bottom: 0;
  width: auto;
  padding: 48px 64px;
  background-color: #FEFEFE;
  z-index: 111;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 24px;
  border-radius: 2px 2px 0 0;
}

@media screen and (max-width: 728px) {
  .popup-panel {
    width: 100%;
    max-width: 100%;
    padding: 24px;
    left: 0;
    bottom: 0;
    margin-left: 0;
  }
}

.popup-panel .link-popup {
  width: fit-content;
}

.popup-panel .link-popup img {
  width: 12px;
  height: 12px;
}

.popup-panel p {
  line-height: 110%;
  letter-spacing: 0;
}

.popup-panel .projects {
  margin-bottom: 0px;
}

@media screen and (max-width: 728px) {
  .popup-panel .projects {
    margin-bottom: 0px;
  }
}

.popup-panel .projects h1 {
  margin-bottom: 16px;
}

.popup-panel .projects p {
  line-height: 110%;
  letter-spacing: 0;
  margin-bottom: 8px;
}

